--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -88,3 +88,20 @@
     cursor: pointer;
     font-size: 15px;
 }
+.password-input-container {
+    position: relative;
+  }
+
+  .password-input-container input {
+    width: 100%;
+    padding-right: 40px; 
+  }
+  
+  .toggle-password-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #aaa;
+  }
